# GuillotinaObjectStore

./: .gitignore  Cargo.toml  README.md  server.proto
src/: client.rs  guillotina.rs  guillotina_grpc.rs  main.rs  transaction.proto  transaction.rs  transaction_grpc.rs
src/client/: README.md  config.yaml  requirements.txt  setup.py  transaction_client.py  transaction_pb2.py  transaction_pb2_grpc.py
src/client/guillotina_grpc/: __init__.py  api.py  grpc_helper.py  guillotina_app.py  install.py  transaction_client.py  transaction_pb2.py  transaction_pb2_grpc.py
src/client/guillotina_grpc/tests/: conftest.py  fixtures.py  test_install.py
