[package]
name = "grocksdb"
version = "0.1.0"
authors = ["Kumar Akshay <k.akshay9721@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
grpcio-sys = "0.5.0"
libc = "0.2"
futures = "^0.1.15"
protobuf = "2.0"
prost = { version = "0.6", optional = true }
bytes = { version = "0.5", optional = true }
log = "0.4"
grpcio = "0.5.0"
serde_json = "1.0"
serde = "1.0"
serde_derive = "1.0"
grpcio-proto = "0.5.0"
rand = "0.7"
slog = "2.5"
slog-async = "2.1"
slog-stdlog = "4.0"
slog-scope = "4.0"
slog-term = "2.2"
